Development dashboard performance fix

--- a/Development/TomPIT.Development.UI/Views/Index.cshtml
+++ b/Development/TomPIT.Development.UI/Views/Index.cshtml
@@ -2,154 +2,80 @@
 @model TomPIT.Models.HomeModel
 
 @{
-	Layout = "~/Views/Shared/Shell.cshtml";
+    Layout = "~/Views/Shared/Shell.cshtml";
 }
 
-<div class="doc-canvas">
-	<div class="paper">
+<div class="doc-canvas h-100">
+    <div class="paper">
+        <div class="container-fluid">
+            <div class="m-1">
+                <div class="row">
+                    <div class="col-sm-9">
+                        <h4>@StringUtils.TextWithNumber("Microservices", Model.Discovery.Services.Count)</h4>
+                    </div>
+                    <div class="col-sm-3">
+                        <div id="search"></div>
+                    </div>
+                </div>
+            </div>
 
+            <hr />
 
-		<div class="container-fluid">
-			<div class="m-1">
-				<div class="row">
-					<div class="col-sm-9">
-						<h4>Technology tree</h4>
-					</div>
-					<div class="col-sm-3">
-						<div id="search"></div>
-					</div>
-				</div>
+            <ul class="list-unstyled">
+                @foreach (var i in Model.Discovery.Services.OrderBy(f => f.Name))
+                {
+                    <li data-kind="microService" class="microservice-list-item collapse show" data-url="@i.Url">
+                        <span data-search="true">@i.Name</span>
+                        @if (i.CommitStatus != TomPIT.ComponentModel.CommitStatus.Synchronized)
+                        {
+                            <span class="badge badge-warning">not synchronized</span>
+                        }
 
-				<hr />
+                        <div>
+                            <small>@Model.ResolveTemplate(i)</small>
+                        </div>
+                    </li>
+                }
+            </ul>
 
-
-				<div class="technology-tree">
-					@foreach (var i in Model.Discovery.Root)
-					{
-						<div data-level="root">
-							@await Html.PartialAsync("~/Views/Partial/MicroserviceCard.cshtml", i)
-						</div>
-					}
-				</div>
-			</div>
-
-		</div>
-	</div>
+        </div>
+    </div>
 </div>
 
-@section Scripts{
-	<script>
-		DevExpress.ui.setTemplateEngine("underscore");
-	</script>
-}
 <script>
-	$('.microservice-header').click(function (e) {
-		if ($(e.target).hasClass('microservice-name') || $(e.target).parent().hasClass('microservice-name'))
-			return;
+    $('[data-kind="microService"]').click(function (e) {
+        var url = $(this).attr('data-url');
 
-		var t = $(this).closest('.microservice-card');
+        window.location = '@Model.RootUrl()/ide/' + url;
+    });
 
-		var body = t.children('.microservice-body');
-		var header = t.children('.microservice-header');
-		var shown = body.hasClass('show');
+    $('#search').dxTextBox({
+        mode: 'search',
+        onValueChanged: function (e) {
 
-		if (shown)
-			header.removeClass('active');
-		else
-			header.addClass('active');
+            $.each($('[data-kind="microService"]'), function (i, v) {
+                if (e.value.length === 0)
+                    $(v).collapse('show');
+                else {
+                    var searchElements = $(v).find('[data-search="true"]');
+                    var hit = false;
 
-		body.collapse('toggle');
-	});
+                    $.each(searchElements, function (si, sv) {
+                        var result = new RegExp(e.value, 'i').exec($(v).html());
 
-	$('.microservice-api-header').click(function (e) {
-		var t = $(this).closest('.microservice-api-card');
+                        if (result) {
+                            $(v).collapse('show');
+                            hit = true;
 
-		var body = t.children('.microservice-api-body');
-		var header = t.children('.microservice-api-header');
-		var shown = body.hasClass('show');
+                            return false;
+                        }
+                    });
 
-		if (shown)
-			header.removeClass('active');
-		else
-			header.addClass('active');
+                    if (!hit)
+                        $(v).collapse('hide');
+                }
+            });
+        }
+    });
 
-		body.collapse('toggle');
-	})
-
-	$('#search').dxTextBox({
-		mode: 'search',
-		onValueChanged: function (e) {
-
-			showAll();
-			$('.microservice-header').removeClass('active');
-			$('.microservice-body').removeClass('show');
-
-			$('.microservice-api-header').removeClass('active');
-			$('.microservice-api-body').collapse('hide');
-
-			if (e.value.length === 0)
-				return;
-
-			var targets = $('[data-search="true"]');
-
-			$.each(targets, function (idx, v) {
-				var result = new RegExp(e.value, 'i').exec($(v).html());
-
-				if (result) {
-					var card = $(v).closest('[data-kind="search-scope"]');
-
-					showCard(card);
-				}
-			});
-
-			hideMissingTargets();
-		}
-	});
-
-	function showCard(card) {
-		if (card.length === 0)
-			return;
-
-		var body;
-		var header;
-
-		if (card.hasClass('microservice-card')) {
-			body = card.children('.microservice-body');
-			header = card.children('.microservice-header');
-		}
-		else {
-			body = card.children('.microservice-api-body');
-			header = card.children('.microservice-api-header');
-		}
-
-		body.collapse('show');
-		header.addClass('active');
-
-		showCard(card.parent().closest('.microservice-card'));
-	}
-
-	function hideMissingTargets(root) {
-		if (typeof root === 'undefined')
-			root = $('[data-level="root"]').children('.microservice-card');
-
-		$.each(root, function (i, v) {
-			var visible = $(v).children('.microservice-header').hasClass('active');
-
-			if (!visible)
-				$(v).hide();
-			else
-				hideMissingTargets($(v).children('.microservice-body > .microservice-card'));
-
-		});
-	}
-	$('.technology-tree').dxScrollView({
-		height: 'calc(100vh - 240px)',
-		width: '100%',
-		direction: 'both'
-	});
-
-
-	function showAll() {
-		$('.microservice-card').show();
-	}
 </script>
