--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.less
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.less
@@ -81,3 +81,18 @@
 .test-case{
 	padding-left:15px;
 }
+
+.microservice-list-item{
+    width:100%;
+    padding:10px;
+    background-color:#FFF;
+    border:1px solid @Grey300;
+    margin:5px 0;
+    border-radius:4px;
+    cursor:pointer;
+}
+
+.microservice-list-item:hover{
+    color:#FFF;
+    background-color:@Blue500;
+}
