--- a/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.css
+++ b/Development/TomPIT.Development.UI/wwwroot/Assets/Styles/development.css
@@ -60,3 +60,16 @@
 .test-case {
   padding-left: 15px;
 }
+.microservice-list-item {
+  width: 100%;
+  padding: 10px;
+  background-color: #FFF;
+  border: 1px solid #e0e0e0;
+  margin: 5px 0;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.microservice-list-item:hover {
+  color: #FFF;
+  background-color: #2196f3;
+}
