--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/Deployment.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/Deployment.cshtml
@@ -4,50 +4,136 @@
 <script src="~/Assets/Scripts/Designers/deployment.js"></script>
 
 <div id="deploymentDesigner">
-	@if (Model.Account != null)
-	{
-		<div class="p-1">
-			@Model.Account.Company
-			<div class="small float-right"><a href="#" id="aLogoff">logoff</a></div>
-			<hr />
-		</div>
-	}
-	else
-	{
-		<div class="p-1">
-			<div class="small float-right"><a href="#" id="aLogin">login</a></div>
-			<hr />
-		</div>
+    @if (Model.Account != null)
+    {
+        <div class="p-1">
+            @Model.Account.Company
+            <div class="small float-right"><a href="#" id="aLogoff">logoff</a></div>
+            <hr />
+        </div>
+    }
+    else
+    {
+        <div class="p-1">
+            <div class="small float-right"><a href="#" id="aLogin">login</a></div>
+            <hr />
+        </div>
 
-	}
+    }
 
-	<div id="mainPackage" class="collapse">
-		<div class="doc-canvas">
-			<div class="paper">
-				<div class="btn-toolbar package-toolbar justify-content-between">
-					<div class="btn-group-sm">
-						<button type="button" id="btnShowList" title="return to packages" class="btn btn-sm btn-light"><i class="fal fa-arrow-left"></i></button>
-						<button type="button" id="btnInstallPackages" title="install package(s)" class="btn btn-sm btn-success"><i class="fal fa-download"></i></button>
-					</div>
-					<div class="btn-group-sm pt-2">
-						@*						<small class="pr-1">total</small><span class="package-total">0€</span>*@
-					</div>
-				</div>
-				<div id="packageContent">
+    <div id="mainPackage" class="collapse">
+        <div class="doc-canvas">
+            <div class="paper">
+                <div class="btn-toolbar package-toolbar justify-content-between">
+                    <div class="btn-group-sm">
+                        <button type="button" id="btnShowList" title="return to packages" class="btn btn-sm btn-light"><i class="fal fa-arrow-left"></i></button>
+                        <button type="button" id="btnInstallPackages" title="install package(s)" class="btn btn-sm btn-success"><i class="fal fa-download"></i></button>
+                    </div>
+                    <div class="btn-group-sm pt-2">
+                        @*						<small class="pr-1">total</small><span class="package-total">0€</span>*@
+                    </div>
+                </div>
+                <div id="packageContent">
 
-				</div>
-			</div>
-		</div>
-	</div>
-	<div id="packagePeek" class="collapse">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="packagePeek" class="collapse">
+    </div>
+    <div id="packageList" class="collapse show">
+        <div class="row">
+            <div class="col-lg-3">
+                <ul class="list-unstyled">
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-layer-plus"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">New</div>
+                                Recently published public Microservices
+                            </div>
+                        </div>
+                    </li>
 
-	</div>
-	<div id="packageList" class="collapse show">
-		@foreach (var i in Model.PublicPackages)
-		{
-			@await Html.PartialAsync("~/Views/Ide/Designers/DeploymentPackageCard.cshtml", new TomPIT.Management.Models.DeploymentPackageCardModel(Model, i))
-		}
-	</div>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-layer-group"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">Updates</div>
+                                Updates to your installed Microservices
+                            </div>
+                        </div>
+                    </li>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-fire"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">Popular</div>
+                                Microservices with most downloads
+                            </div>
+                        </div>
+                    </li>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-comment-smile"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">Recommended</div>
+                                Best rated Microservices
+                            </div>
+                        </div>
+                    </li>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-download"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">Installed</div>
+                                Microservices installed in this instance
+                            </div>
+                        </div>
+                    </li>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-user"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">My</div>
+                                Microservices published by you
+                            </div>
+                        </div>
+                    </li>
+                    <li class="marketplace-nav-item">
+                        <div class="media">
+                            <div class="align-self-center">
+                                <div class="glyph"><i class="fal fa-gift"></i></div>
+                            </div>
+                            <div class="media-body">
+                                <div class="text">Free</div>
+                                Free of charge Microservices
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-lg-9">
+                @foreach (var i in Model.PublicPackages)
+                {
+                    @await Html.PartialAsync("~/Views/Ide/Designers/DeploymentPackageCard.cshtml", new TomPIT.Management.Models.DeploymentPackageCardModel(Model, i))
+                }
+
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
