--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/management.less
@@ -309,3 +309,27 @@ li.metric-item.fail[data-detail="true"]{
 	padding: 10px 0;
 	margin-top:5px;
 }
+
+li.marketplace-nav-item{
+    border-bottom:1px solid @Grey300;
+    padding:5px 0;
+}
+
+li.marketplace-nav-item:hover{
+    background-color:@Blue500;
+    color:#FFF;
+}
+
+li.marketplace-nav-item .glyph {
+    padding: 0 15px;
+    display: inline;
+    font-size: 1.5rem;
+}
+
+li.marketplace-nav-item .text{
+    font-size:1.25rem;
+}
+
+.pointer{
+    cursor:pointer;
+}
