Operation schema event added

--- a/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Designers/Text.cshtml
@@ -253,7 +253,7 @@
 			  });
 
 			  $('#checkDirectBinding').dxCheckBox({
-				  'value': true,
+				  'value': false,
 				  'text': 'use direct binding'
 			  });
 
