--- a/Development/TomPIT.Ide.UI/Views/Ide/Selection/Selection.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Selection/Selection.cshtml
@@ -1,33 +1,39 @@
 ﻿@model TomPIT.Ide.IEnvironment
 
-<ul class="nav nav-tabs" id="devSelectionTabs" role="tablist">
-	<li class="nav-item" title="Properties">
-		<a class="nav-link active" id="devSelectionPropertyTab" data-toggle="tab" href="#devTabPropertyGrid" role="tab" aria-controls="properties" aria-selected="true"><i class="fal fa-tasks"></i></a>
-	</li>
-	<li class="nav-item" title="Events">
-		<a class="nav-link" id="devSelectionEventsTab" data-toggle="tab" href="#devTabEvents" role="tab" aria-controls="events" aria-selected="false"><i class="fal fa-bolt"></i></a>
-	</li>
-	<li class="nav-item" title="Toolbox">
-		<a class="nav-link" id="devSelectionToolboxTab" data-toggle="tab" href="#devTabToolbox" role="tab" aria-controls="toolbox" aria-selected="false"><i class="fal fa-toolbox"></i></a>
-	</li>
-	<li class="nav-item" title="Add items">
-		<a class="nav-link" id="devSelectionReflectorTab" data-toggle="tab" href="#devTabReflector" role="tab" aria-controls="reflector" aria-selected="false"><i class="fal fa-puzzle-piece"></i></a>
-	</li>
-</ul>
-<div class="tab-content" id="devSelectionTabContent">
-	<div class="tab-pane fade show active" id="devTabPropertyGrid" role="tabpanel" aria-labelledby="properties-tab">
-		@await Html.PartialAsync("~/Views/Ide/Selection/Properties.cshtml", Model)
-	</div>
-	<div class="tab-pane fade" id="devTabEvents" role="tabpanel" aria-labelledby="events-tab">
-		@await Html.PartialAsync("~/Views/Ide/Selection/Events.cshtml", Model)
-	</div>
-	<div class="tab-pane fade" id="devTabToolbox" role="tabpanel" aria-labelledby="toolbox-tab">
-		@await Html.PartialAsync("~/Views/Ide/Selection/Toolbox.cshtml", Model)
-	</div>
-	<div class="tab-pane fade" id="devTabReflector" role="tabpanel" aria-labelledby="reflector-tab">
-		@await Html.PartialAsync("~/Views/Ide/Selection/AddItems.cshtml", Model)
-	</div>
-</div>
+    <ul class="nav nav-tabs" id="devSelectionTabs" role="tablist">
+        <li class="nav-item" title="Properties">
+            <a class="nav-link active" id="devSelectionPropertyTab" data-toggle="tab" href="#devTabPropertyGrid" role="tab" aria-controls="properties" aria-selected="true"><i class="fal fa-tasks"></i></a>
+        </li>
+        <li class="nav-item" title="Events">
+            <a class="nav-link" id="devSelectionEventsTab" data-toggle="tab" href="#devTabEvents" role="tab" aria-controls="events" aria-selected="false"><i class="fal fa-bolt"></i></a>
+        </li>
+        <li class="nav-item" title="Toolbox">
+            <a class="nav-link" id="devSelectionToolboxTab" data-toggle="tab" href="#devTabToolbox" role="tab" aria-controls="toolbox" aria-selected="false"><i class="fal fa-toolbox"></i></a>
+        </li>
+        <li class="nav-item" title="Add items">
+            <a class="nav-link" id="devSelectionReflectorTab" data-toggle="tab" href="#devTabReflector" role="tab" aria-controls="reflector" aria-selected="false"><i class="fal fa-puzzle-piece"></i></a>
+        </li>
+        <li class="nav-item" title="Error list">
+            <a class="nav-link" id="devSelectionErrorListTab" data-toggle="tab" href="#devTabErrorList" role="tab" aria-controls="errorList" aria-selected="false"><i class="fal fa-info-circle"></i><span id="devErrorCount"></span></a>
+        </li>
+    </ul>
+    <div class="tab-content" id="devSelectionTabContent">
+        <div class="tab-pane fade show active" id="devTabPropertyGrid" role="tabpanel" aria-labelledby="properties-tab">
+            @await Html.PartialAsync("~/Views/Ide/Selection/Properties.cshtml", Model)
+        </div>
+        <div class="tab-pane fade" id="devTabEvents" role="tabpanel" aria-labelledby="events-tab">
+            @await Html.PartialAsync("~/Views/Ide/Selection/Events.cshtml", Model)
+        </div>
+        <div class="tab-pane fade" id="devTabToolbox" role="tabpanel" aria-labelledby="toolbox-tab">
+            @await Html.PartialAsync("~/Views/Ide/Selection/Toolbox.cshtml", Model)
+        </div>
+        <div class="tab-pane fade" id="devTabReflector" role="tabpanel" aria-labelledby="reflector-tab">
+            @await Html.PartialAsync("~/Views/Ide/Selection/AddItems.cshtml", Model)
+        </div>
+        <div class="tab-pane fade" id="devTabErrorList" role="tabpanel" aria-labelledby="errorlist-tab">
+            @await Html.PartialAsync("~/Views/Ide/Selection/ErrorList.cshtml", Model)
+        </div>
+    </div>
 
 <script>
 	(function () {
@@ -45,5 +51,5 @@
 
 	$('#devSelectionTabs a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
 		ide.setSelectionView($(e.target).attr("aria-controls"));
-	});
+    });
 </script>
