Marshalling bug fix

--- a/Development/TomPIT.Ide.UI/Views/Ide/Ide.cshtml
+++ b/Development/TomPIT.Ide.UI/Views/Ide/Ide.cshtml
@@ -111,16 +111,16 @@
     </text>
 	}
     
-   setInterval(function () {
-        ide.refreshSections({
-            sections: 'errorList',
-            path: ide.selectedPath(),
-            data: {
-                'error': ide.options.designer.errorListState.error,
-                'warning': ide.options.designer.errorListState.warning,
-                'info': ide.options.designer.errorListState.info
-            }
-        });
-    }, 5000);
+   //setInterval(function () {
+   //     ide.refreshSections({
+   //         sections: 'errorList',
+   //         path: ide.selectedPath(),
+   //         data: {
+   //             'error': ide.options.designer.errorListState.error,
+   //             'warning': ide.options.designer.errorListState.warning,
+   //             'info': ide.options.designer.errorListState.info
+   //         }
+   //     });
+   // }, 5000);
 
 </script>
