--- a/Development/TomPIT.Templates.IoT/Views/IoT/IoTView.cshtml
+++ b/Development/TomPIT.Templates.IoT/Views/IoT/IoTView.cshtml
@@ -4,7 +4,7 @@
 @using TomPIT.IoT.UI;
 @using TomPIT.IoT;
 
-@model TomPIT.Models.IRuntimeModel
+@model TomPIT.Models.IViewModel
 
 @{
 	var view = Model.ViewConfiguration as IoTView;
