--- a/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/tompit.css
+++ b/Management/TomPIT.Management.UI/wwwroot/Assets/Styles/tompit.css
@@ -677,9 +677,6 @@ table tbody tr[data-filtered="true"] {
   background-color: #FFF;
   border: 1px solid #e0e0e0;
 }
-table > tbody > tr > td {
-  border-bottom: 1px solid #e0e0e0;
-}
 .w-10 {
   width: 10% !important;
 }
@@ -763,4 +760,42 @@ table > tbody > tr > td {
   padding: 15px;
   border: 1px solid #e0e0e0;
   border-radius: 4px;
+}
+.info-panel {
+  padding: 25px;
+  border-left: 8px solid;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.info-panel.warning {
+  border-left-color: #ffa000;
+  background: #fff3e0;
+}
+.info-panel.success {
+  border-left-color: #689f38;
+  background: #f1f8e9;
+}
+.info-panel.info {
+  border-left-color: #0288d1;
+  background: #e1f5fe;
+}
+.info-panel.primary {
+  border-left-color: #1976d2;
+  background: #e3f2fd;
+}
+.info-panel.danger {
+  border-left-color: #d32f2f;
+  background: #ffebee;
+}
+.info-panel.light {
+  border-left-color: #9e9e9e;
+  background: #f5f5f5;
+}
+.content-panel {
+  border: 1px solid #e0e0e0;
+  border-radius: 4px;
+  padding: 25px;
+  background: #f5f5f5;
+  margin-top: 15px;
+  margin-bottom: 15px;
 }
