Big data staging

--- a/Runtime/TomPIT.UI/Views/Shared/StandardHeaders.cshtml
+++ b/Runtime/TomPIT.UI/Views/Shared/StandardHeaders.cshtml
@@ -14,5 +14,5 @@
 <meta name="theme-color" content="#337ab7">
 <meta http-equiv="X-UA-Compatible" content="IE =edge" />
 <meta name="content-type" content="text/html; charset=UTF-8" />
-<meta name="content-language" content="@System.Threading.Thread.CurrentThread.CurrentUICulture.Name)" />
-<meta name="lang" content="@System.Threading.Thread.CurrentThread.CurrentUICulture.Name)" />
+<meta name="content-language" content="@System.Threading.Thread.CurrentThread.CurrentUICulture.Name" />
+<meta name="lang" content="@System.Threading.Thread.CurrentThread.CurrentUICulture.Name" />
