--- a/App/TomPIT.App.UI/Views/Shared/Header.cshtml
+++ b/App/TomPIT.App.UI/Views/Shared/Header.cshtml
@@ -1,10 +1,10 @@
 ﻿<environment names="Staging,Production">
-	<link rel="stylesheet" type="text/css" href="~/Assets/styles.min.css" />
-	<script src="~/Assets/scripts.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="~/Assets/styles.min.css">
+    <script src="~/Assets/scripts.min.js"></script>
 </environment>
 <environment names="Development">
-	<link rel="stylesheet" type="text/css" href="~/Assets/Fonts/OpenSans/opensans.css" />
-	<link rel="stylesheet" type="text/css" href="~/Assets/Styles/bootstrap/bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="~/Assets/Fonts/OpenSans/opensans.css">
+	<link rel="stylesheet" type="text/css" href="~/Assets/Styles/bootstrap/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="~/Assets/Styles/tompit.css" />
 	<script src="~/Assets/Scripts/jquery.js"></script>
 	<script src="~/Assets/Scripts/tether.js"></script>
@@ -24,5 +24,4 @@
 	<script src="~/Assets/Scripts/jscroll.js"></script>
 	<script src="~/Assets/Scripts/moment.js"></script>
 	<script src="~/Assets/Scripts/jquery.number.js"></script>
-	<script src="~/Assets/Scripts/table.js"></script>
 </environment>
