--- a/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentSignup.cshtml
+++ b/Management/TomPIT.Management.UI/Views/Ide/Designers/DeploymentSignup.cshtml
@@ -8,7 +8,7 @@
                     <div class="info-box info">
                         <div class="info-box-header">Tom PIT Marketplace sign up</div>
                         By signing up to the Tom PIT marketplace you'll be able to publish, sell, distribute and deploy your microservices. Tom PIT marketplace is <strong>free to use</strong>.
-                        If you already have a <strong>Tom PIT publisher account</strong> you can sign in <a href="#" id="aLogin">here</a>.
+                        If you already have a <strong>Tom PIT account</strong> you can sign in <a href="#" id="aLogin">here</a>.
                     </div>
                     <div class="tp-form">
                         <div class="body">
