--- a/Runtime/TomPIT.UI/Views/Shared/HeaderIdentity.cshtml
+++ b/Runtime/TomPIT.UI/Views/Shared/HeaderIdentity.cshtml
@@ -43,7 +43,7 @@
 					</div>
 				</li>
 				<li class="dropdown-divider"></li>
-				<li class="dropdown-item"><a href="~/sys/logoff">@SR.MenuLogoff</a></li>
+				<li class="dropdown-item"><a href="~/logoff">@SR.MenuLogoff</a></li>
 
 				@if (Model.Navigation != null && Model.Navigation.Links.Count > 0)
 				{
