--- a/Runtime/TomPIT.UI/Views/Shared/ShellDocument.cshtml
+++ b/Runtime/TomPIT.UI/Views/Shared/ShellDocument.cshtml
@@ -18,7 +18,7 @@
                         <h2 class="text-truncate">@ViewBag.Title</h2>
                         <div class="breadcrumbs">
                             <ul class="list-inline">
-                                <li class="list-inline-item"><a href="@Url.RouteUrl("home")"><i class="fal fa-home"></i></a></li>
+                                <li class="list-inline-item"><a href="/"><i class="fal fa-home"></i></a></li>
                                 @foreach (var item in Model.Navigation.Breadcrumbs)
                                 {
                                     <li class="list-inline-item"><i class="fal fa-angle-right"></i></li>
@@ -65,6 +65,8 @@
     <environment names="Development">
         <script src="~/Assets/Scripts/foot.js"></script>
     </environment>
+
+    <script defer src="~/Assets/fonts.min.js"></script>
 </body>
 </html>
 
