--- a/Runtime/TomPIT.UI/Views/Shared/StandardHeaders.cshtml
+++ b/Runtime/TomPIT.UI/Views/Shared/StandardHeaders.cshtml
@@ -2,16 +2,12 @@
 
 <meta charset="utf-8">
 <meta name="viewport" content="width =device-width, initial-scale=1.0, shrink-to-fit=no" />
-<link rel="apple-touch-icon" sizes="180x180" href="@Model.MapPath("~/Assets/Images/Brand/apple-touch-icon.png?v=yyxLgoovJ4")" />
-<link rel="icon" type="image/png" href="@Model.MapPath("~/Assets/Images/Brand/favicon-32x32.png?v=yyxLgoovJ4")" sizes="32x32" />
-<link rel="icon" type="image/png" href="@Model.MapPath("~/Assets/Images/Brand/favicon-16x16.png?v=yyxLgoovJ4")" sizes="16x16" />
-<link rel="manifest" href="@Model.MapPath("~/Assets/Images/Brand/manifest.json?v=yyxLgoovJ4")" />
-<link rel="mask-icon" href="@Model.MapPath("~/Assets/Images/Brand/safari-pinned-tab.svg?v=yyxLgoovJ4")" color="#337ab7" />
-<link rel="shortcut icon" href="@Model.MapPath("~/Assets/Images/Brand/favicon.ico?v=yyxLgoovJ4")" />
-<meta name="apple-mobile-web-app-title" content="Tom PIT">
-<meta name="application-name" content="Tom PIT">
-<meta name="msapplication-config" content="@Model.MapPath("~/Assets/Images/Brand/browserconfig.xml?v=yyxLgoovJ4")">
-<meta name="theme-color" content="#337ab7">
+<link rel="apple-touch-icon" sizes="180x180" href="@Model.MapPath("~/Assets/Images/Brand/apple-touch-icon.png?v=1")">
+<link rel="icon" type="image/png" sizes="32x32" href="@Model.MapPath("~/Assets/Images/Brand/favicon-32x32.png?v=1")">
+<link rel="icon" type="image/png" sizes="16x16" href="@Model.MapPath("~/Assets/Images/Brand/favicon-16x16.png?v=1")">
+<link rel="manifest" href="@Model.MapPath("~/Assets/Images/Brand/site.webmanifest?v=1")">
+<link rel="mask-icon" href="@Model.MapPath("~/Assets/Images/Brand/safari-pinned-tab.svg?v=1")" color="#5bbad5">
+<link rel="shortcut icon" href="@Model.MapPath("~/Assets/Images/Brand/favicon.ico?v=1")">
 <meta http-equiv="X-UA-Compatible" content="IE =edge" />
 <meta name="content-type" content="text/html; charset=UTF-8" />
 <meta name="content-language" content="@System.Threading.Thread.CurrentThread.CurrentUICulture.Name" />
