--- a/Runtime/TomPIT.UI/Views/Shared/Sys.cshtml
+++ b/Runtime/TomPIT.UI/Views/Shared/Sys.cshtml
@@ -26,5 +26,7 @@
     <environment names="Development">
         <script src="~/Assets/Scripts/foot.js"></script>
     </environment>
+
+    <script defer src="~/Assets/fonts.min.js"></script>
 </body>
 </html>
